Version 1.5.5
============
* PositionInfo: cellId timeout 5s => 15s, show bigger map

Version 1.5.4
============
* fixed a bug in config.js which broke all the widgets that had been built for 1.5.3
* Telephony: wildcard in callrecordtype not supported, only in name - fixed
* videocamera: hiRes flag was not set properly for hiRes tests
* videoplayer: replace with video from email
* messaging: move msg to folder is not supported, adding a lot of config stuff


Version 1.5.3
============
* VideoPlayer: raised timeouts 10 to 20s, fixed some bugs
* Calendar: disable some recurrence types that are not applicable on H2

Version 1.5.2
============
* changed version in feature URL in config.xml
  http://jil.org/jil/api/1.2/device => http://jil.org/jil/api/1.1/device
  http://jil.org/jil/api/1.2/widget => http://jil.org/jil/api/1.1/widget
+ VideoPlayer: added new video formats as provided by Samsung
+ M2 now also supported

Version 1.5.1
============
* Added more exact instructions for PHONECALL case.
* use new wt.CallRecord()
* Telephony, Application, RadioInfo, VideoCamera, Calendar: fix various bugs
* Messaging: dont create folders if not supported

Version 1.5
============
+ VideoPlayer: H.264 test
+ moved test-* files for easier building, fixed AudioPlayer

Version 1.4.1
============
+ fixed various smaller bugs
* MessagingEmailAccounts
  + config.supportsDeleteEmailAccounts (false for H2) added according test to MessagingEmailAccount, 
* RadioInfo
  - disabled isRoaming tests ... dont know how to test them :(
  + added tests for switching from 2G to 3G
* Camera
  + make fullscreen tests hide the preview after a bit, to allow user confirm result
+ Telephony - bugfixing in onCallEvent tests
* VideoPlayer - changed type in <object> tag to "video/3gp"
+ VideoCamera - changed type in <object> tag to "video-camera/3gp", fixed wrong extensions "jpg" to "mp4" used in tests

Version 1.4
============
+ MQC release, created diff, etc.

Version 1.3
============