@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>test-jil-File</title>
+	<title>test-jil-VideoCamera</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 
 	<link rel="stylesheet" href="css/style.css" type="text/css">
@@ -93,7 +93,7 @@
 			}};
 		}
 	</script>
-	<script src='tests/jil/File.js' type='text/javascript'></script>
+	<script src='tests/jil/VideoCamera.js' type='text/javascript'></script>
 	<script type="text/javascript">
 		util.query(".statusBar .numTests")[0].innerHTML = doh._numTests;
 		try{
